Added icons. Other UI tweaks.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,14 +11,24 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>androVM Manager</string>
+   <string>AndroVM Manager</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_vmName">
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="lineEdit_ipAddr">
+      <property name="toolTip">
+       <string>IP address of the AndroVM emulator (e.g., 192.168.56.101)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_ipAddr">
       <property name="text">
-       <string>VM name</string>
+       <string>VM IP Address</string>
+      </property>
+      <property name="buddy">
+       <cstring>lineEdit_ipAddr</cstring>
       </property>
      </widget>
     </item>
@@ -29,20 +39,30 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_ipAddr">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_vmName">
       <property name="text">
-       <string>IP Address</string>
+       <string>VM name</string>
       </property>
       <property name="buddy">
-       <cstring>lineEdit_ipAddr</cstring>
+       <cstring>lineEdit_vmName</cstring>
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_ipAddr">
-      <property name="toolTip">
-       <string>IP address of the AndroVM emulator (e.g., 192.168.56.101)</string>
+    <item row="0" column="2">
+     <widget class="QToolButton" name="toolBtn_run">
+      <property name="text">
+       <string>Run emulator</string>
+      </property>
+      <property name="toolButtonStyle">
+       <enum>Qt::ToolButtonIconOnly</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QToolButton" name="toolBtn_connect">
+      <property name="text">
+       <string>Connect</string>
       </property>
      </widget>
     </item>
@@ -96,6 +116,10 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Quit">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/application-exit.png</normaloff>:/icons/icons/application-exit.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
@@ -104,16 +128,28 @@
    </property>
   </action>
   <action name="action_Preferences">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/configuration_section.png</normaloff>:/icons/icons/configuration_section.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Preferences...</string>
    </property>
   </action>
   <action name="action_About">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/help-about.png</normaloff>:/icons/icons/help-about.png</iconset>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
   </action>
   <action name="action_Run_emulator">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/media-playback-start.png</normaloff>:/icons/icons/media-playback-start.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Run emulator</string>
    </property>
@@ -122,8 +158,15 @@
    </property>
   </action>
   <action name="action_Connect">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/stock_connect.png</normaloff>:/icons/icons/stock_connect.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Connect</string>
+   </property>
+   <property name="toolTip">
+    <string>Connect VM to ADB</string>
    </property>
    <property name="shortcut">
     <string>F12</string>
@@ -131,6 +174,8 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
