--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,64 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>359</width>
-    <height>138</height>
+    <width>303</width>
+    <height>232</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>AndroVM Manager</string>
+   <string>Android VM Manager</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="icons.qrc">
+    <normaloff>:/icons/icons/application-default-icon.png</normaloff>:/icons/icons/application-default-icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_ipAddr">
-      <property name="toolTip">
-       <string>IP address of the AndroVM emulator (e.g., 192.168.56.101)</string>
+    <item row="2" column="0">
+     <widget class="QGroupBox" name="group_ipAddr">
+      <property name="title">
+       <string>VM IP Address</string>
       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLineEdit" name="lineEdit_ipAddr">
+         <property name="toolTip">
+          <string>IP address of the AndroVM emulator (e.g., 192.168.56.101)</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QLabel" name="label_ipAddr">
-      <property name="text">
-       <string>VM IP Address</string>
+     <widget class="QGroupBox" name="group_vmName">
+      <property name="title">
+       <string>VM Name</string>
       </property>
-      <property name="buddy">
-       <cstring>lineEdit_ipAddr</cstring>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit_vmName">
-      <property name="toolTip">
-       <string>Name of the AndroVM virtual machine in Virtual Box.</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_vmName">
-      <property name="text">
-       <string>VM name</string>
-      </property>
-      <property name="buddy">
-       <cstring>lineEdit_vmName</cstring>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <widget class="QToolButton" name="toolBtn_run">
-      <property name="text">
-       <string>Run emulator</string>
-      </property>
-      <property name="toolButtonStyle">
-       <enum>Qt::ToolButtonIconOnly</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="2">
-     <widget class="QToolButton" name="toolBtn_connect">
-      <property name="text">
-       <string>Connect</string>
-      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLineEdit" name="lineEdit_vmName">
+         <property name="toolTip">
+          <string>Name of the virtual machine in Virtual Box</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
@@ -73,7 +58,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>359</width>
+     <width>303</width>
      <height>19</height>
     </rect>
    </property>
@@ -83,6 +68,7 @@
     </property>
     <addaction name="action_Run_emulator"/>
     <addaction name="action_Connect"/>
+    <addaction name="actionDisconnect"/>
     <addaction name="separator"/>
     <addaction name="action_Quit"/>
    </widget>
@@ -110,8 +96,12 @@
     <bool>false</bool>
    </attribute>
    <addaction name="action_Run_emulator"/>
+   <addaction name="separator"/>
    <addaction name="action_Connect"/>
+   <addaction name="actionDisconnect"/>
+   <addaction name="separator"/>
    <addaction name="action_Preferences"/>
+   <addaction name="separator"/>
    <addaction name="action_Quit"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -151,7 +141,10 @@
      <normaloff>:/icons/icons/media-playback-start.png</normaloff>:/icons/icons/media-playback-start.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;Run emulator</string>
+    <string>&amp;Start emulator</string>
+   </property>
+   <property name="toolTip">
+    <string>Start virtual machine emulator</string>
    </property>
    <property name="shortcut">
     <string>F11</string>
@@ -160,20 +153,38 @@
   <action name="action_Connect">
    <property name="icon">
     <iconset resource="icons.qrc">
-     <normaloff>:/icons/icons/stock_connect.png</normaloff>:/icons/icons/stock_connect.png</iconset>
+     <normaloff>:/icons/icons/network-transmit-receive.png</normaloff>:/icons/icons/network-transmit-receive.png</iconset>
    </property>
    <property name="text">
-    <string>&amp;Connect</string>
+    <string>&amp;Connect to ADB</string>
    </property>
    <property name="toolTip">
-    <string>Connect VM to ADB</string>
+    <string>Connect virtual machine to ADB</string>
    </property>
    <property name="shortcut">
     <string>F12</string>
    </property>
   </action>
+  <action name="actionDisconnect">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/network-offline.png</normaloff>:/icons/icons/network-offline.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Disconnect from ADB</string>
+   </property>
+   <property name="toolTip">
+    <string>Disconnect virtual machine from ADB</string>
+   </property>
+   <property name="shortcut">
+    <string>F9</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <tabstops>
+  <tabstop>lineEdit_vmName</tabstop>
+ </tabstops>
  <resources>
   <include location="icons.qrc"/>
  </resources>
