--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -191,7 +191,7 @@
     <string>VM &amp;info</string>
    </property>
    <property name="toolTip">
-    <string>Information about the virtual machine. (VM must be running.)</string>
+    <string>Information about the virtual machine. (VM should be running.)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+I</string>
