--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>320</width>
+    <height>189</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>Android VM Manager</string>
   </property>
@@ -58,7 +66,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>300</width>
+     <width>320</width>
      <height>19</height>
     </rect>
    </property>
