--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,6 +47,9 @@
          <property name="text">
           <string>IP address</string>
          </property>
+         <property name="buddy">
+          <cstring>lineEdit_ipAddr</cstring>
+         </property>
         </widget>
        </item>
        <item row="1" column="1">
